import { afterEach, describe, expect, it, vi } from "vitest";
import { legacy } from "@/test/legacy";
import { configureI18n } from "../i18n/core";
import ja from "../i18n/ja";
import { RAW_CONCEPTS, RAW_THEMES } from "./catalog";
import { allChallenges, concept, suggestTheme, themes } from "./themes";

afterEach(() => vi.restoreAllMocks());

describe("theme catalog", () => {
  it("matches the old app's themes and challenges exactly", async () => {
    const old = await legacy("concepts.js");
    expect(themes()).toEqual(old.THEMES);
    expect(allChallenges()).toEqual(old.allChallenges());
  });

  it("keeps every concept the themes refer to", async () => {
    const old = await legacy("concepts.js");
    for (const [key, c] of Object.entries(old.CONCEPTS as Record<string, { title: string; tip: string }>)) {
      expect(concept(key)).toEqual({ title: c.title, tip: c.tip });
    }
    const referenced = new Set(RAW_THEMES.flatMap((th) => th.concepts));
    for (const key of referenced) expect(RAW_CONCEPTS[key], key).toBeDefined();
  });

  it("has a Japanese translation for every theme string", () => {
    const strings = [
      ...RAW_THEMES.flatMap((th) => [th.title, th.brief, ...th.challenges]),
      ...Object.values(RAW_CONCEPTS).flatMap((c) => [c.title, c.tip]),
    ];
    expect(strings.filter((s) => !(s in ja))).toEqual([]);
  });

  it("translates when Japanese is on", () => {
    configureI18n("ja", ja);
    expect(themes()[0].title).toBe(ja[RAW_THEMES[0].title]);
  });
});

describe("suggestTheme", () => {
  it.each([
    ["morning", new Date(2026, 5, 1, 9, 0)],
    ["golden hour", new Date(2026, 5, 1, 17, 30)],
    ["night", new Date(2026, 5, 1, 22, 0)],
  ])("picks what the old app picks in the %s", async (_label, now) => {
    const old = await legacy("concepts.js");
    const counts = { "golden-hour": 3, "leading-lines": 1, "night-lights": 0, reflections: 2 };
    for (let i = 0; i < 20; i++) {
      const roll = (i + 0.5) / 20;
      vi.spyOn(Math, "random").mockReturnValue(roll);
      const fresh = suggestTheme("reflections", counts, now, () => roll);
      const previous = old.suggestTheme("reflections", counts, now);
      expect(fresh).toEqual(previous);
    }
  });

  it("never suggests night themes in daylight or the excluded theme", () => {
    for (let i = 0; i < 50; i++) {
      const { theme } = suggestTheme("leading-lines", {}, new Date(2026, 5, 1, 11, 0));
      expect(theme.id).not.toBe("night-lights");
      expect(theme.id).not.toBe("leading-lines");
    }
  });
});
